--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
 
 	"devDependencies": {
 		"@parcel/config-default": "^2",
+		"@parcel/packager-ts": "^2",
 		"@parcel/transformer-typescript-tsc": "^2",
-		"parcel": "^2"
+		"@parcel/transformer-typescript-types": "^2",
+		"parcel": "^2",
+		"typescript": "^4"
 	}
 }
