--- a/workspace/example--module--ts/package.json
+++ b/workspace/example--module--ts/package.json
@@ -1,14 +1,18 @@
 {
 	"name": "@offirmo-private/example--module--ts",
 	"version": "0.0.1",
+	"private": true,
+
 	"source": "src/index.ts",
 	"main": "dist/main.js",
 	"module": "dist/module.js",
 	"types": "dist/types.d.ts",
+
 	"scripts": {
-		"watch": "parcel watch --log-level verbose",
+		"dev": "parcel watch --log-level verbose",
 		"build": "parcel build --log-level verbose"
 	},
+
 	"devDependencies": {
 		"@parcel/config-default": "^2",
 		"@parcel/transformer-typescript-tsc": "^2",
